Fix Desktop footer layout issue

--- a/src/assets/styles/components/entities/items/_item-preview.scss
+++ b/src/assets/styles/components/entities/items/_item-preview.scss
@@ -7,6 +7,7 @@
   background: vars.$preview-bg-color;
   min-height: 10rem;
   gap: 0rem;
+  cursor: pointer;
   small.item-price {
     font-weight: 600;
     color: vars.$color-brand;
