--- a/src/assets/styles/layout/_desktopFooter.scss
+++ b/src/assets/styles/layout/_desktopFooter.scss
@@ -2,7 +2,7 @@
 
 footer.desktop-footer {
   display: grid;
-  position: sticky;
+  position: relative;
   bottom: 0;
   height: 2.5rem;
   background: vars.$footer-bg-color;
