--- a/src/assets/styles/layout/_grid.scss
+++ b/src/assets/styles/layout/_grid.scss
@@ -1,9 +1,9 @@
 @use '../utilities/variables' as vars;
 
 main {
-  display: grid;
+  flex: 1;
   gap: 1rem;
-  height: 100%;
+  // height: 100%;
   max-width: clamp(100%, 80vw, 2300px);
   padding: 0.5rem 1rem 0.5rem 1rem;
 
